add link target to each website in section project

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#about" class="page-scroll">About</a></li>
             <li><a href="#projects" class="page-scroll">Projects</a></li>
             <li>
-              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
+              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span>
               <ul class="ps-0">
                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
@@ -280,105 +280,123 @@
       </div>
       <div class="row gy-5 gx-3 mb-4">
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary">LOOP, Find the Fun</p>
-              <p>Web Apps</p>
+          <a href="http://www.loop.net.nz/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary">LOOP, Find the Fun</p>
+                <p class="text-black">Web Apps</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/LOOP - Find the Fun.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/LOOP - Find the Fun.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
-              <p>Agency Web Apps</p>
+          <a href="https://virtualspirit.me/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
+                <p class="text-black">Agency Web Apps</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/Virtual Spirit.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/Virtual Spirit.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">fabrication net</p>
-              <p>Web Apps</p>
+          <a href="https://fabrication.net/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">fabrication net</p>
+                <pc class="text-black">Web Apps</pc>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/FABRICATION-NET_edited.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/FABRICATION-NET_edited.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Eduparc</p>
-              <p>Web Apps</p>
+          <a href="https://eduparc.nl/" target="_blank">
+            <div class="position-relative">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">Eduparc</p>
+                <p class="text-black">Web Apps</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/Eduparc.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/Eduparc.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Best By Peer</p>
-              <p>Web Apps</p>
+          <a href="http://www.bestbypeers.com/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">Best By Peer</p>
+                <p class="text-black">Web Apps</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/BBP.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/BBP.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">belilah</p>
-              <p>E-Commerce Web Apps</p>
+          <a href="http://belilah.com.my/">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">belilah</p>
+                <p class="text-black">E-Commerce Web Apps</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/Belilah Apps.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/Belilah Apps.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Nineod Freight</p>
-              <p>Profile Company</p>
+          <a href="http://www.nineodfreight.com/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">Nineod Freight</p>
+                <p class="text-black">Profile Company</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/NineodFreight.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/NineodFreight.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">
-                sinar indah plastic
-              </p>
-              <p>Profile Company</p>
+          <a href="https://www.sinarindahplastic.com/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">
+                  sinar indah plastic
+                </p>
+                <p class="text-black">Profile Company</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/Sinar indah Plastik.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/Sinar indah Plastik.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-6 project-wrap">
-          <div class="position-relative ">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">kopi hulir</p>
-              <p>Profile Company</p>
+          <a href="https://kopihulir.id/" target="_blank">
+            <div class="position-relative ">
+              <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+                <p class="m-0 txt-primary text-uppercase">kopi hulir</p>
+                <p class="text-black">Profile Company</p>
+              </div>
+              <div class="projects-image position-relative">
+                <img src="./assets/img/Kopi Hulir.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              </div>
             </div>
-            <div class="projects-image position-relative">
-              <img src="./assets/img/Kopi Hulir.jpg" alt="loop-find-image" class="img-fluid position-relative" />
-            </div>
-          </div>
+          </a>
         </div>
       </div>
       <div class="w-100 text-center">
@@ -397,7 +415,7 @@
       <div class="d-flex">
         <div class="box-clients shadow py-4 px-5 m-auto rounded-pill">
           <div class="box-clients-item d-flex h-100 justify-content-center align-items-center">
-            <img src="./assets/img/clients-1.webp" alt="clients-1" class="img-fluid rounded-circle me-5" />
+            <img src="./assets/img/janet.jpg" alt="clients-1" class="img-fluid rounded-circle me-5" />
             <div class="desc pt-3">
               <p class="mb-3 fst-italic">
                 "Good Rails developer and I enjoyed working with their. Speed and
