--- a/services.html
+++ b/services.html
@@ -190,7 +190,7 @@
             <div class="section-services-fifth-title text-center mb-4">
                 <h1 class="text-black overflow-hidden" data-aos="fade-up" data-aos-duration="2000">Pilih Paket Sesuai Kebutuhan Anda</h1>
             </div>
-            <div class="section-services-fifth-body d-flex flex-column justify-content-center align-items-center text-center">
+            <div class="section-services-fifth-body mb-3 d-flex flex-column justify-content-center align-items-center text-center">
                 <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Personal</h4>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">Dapatkan Best Price potongan sebesar Rp.2.000.000 dengan berlangganan selama 2 tahun.</p>
                 <div class="service-image-wrap background-gray px-2 py-3 w-100 row mb-5">
