--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
                         <li><a href="/#about" class="page-scroll">About</a></li>
                         <li><a href="/#projects" class="page-scroll">Projects</a></li>
                         <li>
-                            <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
+                            <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span>
                             <ul class="ps-0">
                                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
@@ -252,8 +252,10 @@
     </footer>
     <script src="./assets/js/jquery/jquery.js"></script>
     <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
-    <script src="./assets/js/aos/aos.js"></script>
+    <script src="./assets/js/slick/slick.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="./assets/js/aos/aos.js"></script>
+    <script src="./assets/js/parallax.js/parallax.js"></script>
     <script src="./assets/js/aos/customAos.js"></script>
     <script src="./assets/js/custom.js"></script>
 </body>
