--- a/website-builder.html
+++ b/website-builder.html
@@ -436,10 +436,12 @@
   </footer>
   <script src="./assets/js/jquery/jquery.js"></script>
   <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
-  <script src="./assets/js/custom.js"></script>
-  <script src="./assets/js/aos/aos.js"></script>
+  <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="./assets/js/aos/aos.js"></script>
+  <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
+  <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
